--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <nav class="navbar">
             <a href="home.html">Home</a>
             <a href="about.html">About</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
             <a href="mainhome.html">MyCart</a>
             <a href="mainlogin.html">Login</a>
         </nav>
