--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <a href="" class="logo">SKINPUBG</a>
 
         <nav class="navbar">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="mainhome.html">MyCart</a>
