--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="" class="logo">SKINPUBG</a>
 
         <nav class="navbar">
-            <a href="home.html">Home</a>
+            <a href="#">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a> 
             <a href="mainhome.html">Crud</a>
